--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -25,7 +26,8 @@
         <activity
             android:name=".auth.LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".auth.RegisterActivity"></activity>
+        <activity android:name=".auth.RegisterActivity" />
+        <activity android:name=".StartActivity"></activity>
     </application>
 
 </manifest>
