Final work on AndroidManifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,20 +15,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity
+            android:name=".MainActivity">
         </activity>
-        <activity android:name=".auth.GoogleSignInActivity" />
+            <activity
+                android:name=".StartActivity" />
+            <activity
+                android:name=".auth.RegisterActivity"
+                android:label="Register"/>
         <activity
             android:name=".auth.LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".auth.RegisterActivity" />
-        <activity android:name=".StartActivity" />
-        <activity android:name=".NewEntryActivity"></activity>
-    </application>
+        <activity
+            android:name=".auth.GoogleSignInActivity" />
+        <activity
+            android:name=".NewEntryActivity"
+            android:label="New Entry" />
+        <intent-filter>
+                <action
+                    android:name="android.intent.action.MAIN" />
 
+                <category
+                    android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+    </application>
 </manifest>
