App complete. Build, Run & Installing - Screenshot

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,6 @@
     package="com.example.journal">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -15,28 +12,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity">
-        </activity>
-            <activity
-                android:name=".StartActivity" />
-            <activity
-                android:name=".auth.RegisterActivity"
-                android:label="Register"/>
-        <activity
-            android:name=".auth.LoginActivity"
-            android:label="@string/title_activity_login" />
-        <activity
-            android:name=".auth.GoogleSignInActivity" />
-        <activity
-            android:name=".NewEntryActivity"
-            android:label="New Entry" />
-        <intent-filter>
-                <action
-                    android:name="android.intent.action.MAIN" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category
-                    android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+            <activity android:name=".StartActivity" />
+               <activity android:name=".auth.RegisterActivity"
+                   android:label="Register"/>
+                     <activity android:name=".auth.LoginActivity"
+                         android:label="@string/title_activity_login" />
+                                  <activity android:name=".NewEntryActivity"
+                                       android:label="New Entry" />
+        <activity android:name=".auth.GoogleSignInActivity" />
+
     </application>
 </manifest>
