Work on GoogleSignInActivity & Logout Functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"></activity>
+        <activity
+            android:name=".NewEntryActivity"
+            android:label="New Entry" />
+        <activity android:name=".auth.GoogleSignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-            <activity android:name=".StartActivity" />
-               <activity android:name=".auth.RegisterActivity"
-                   android:label="Register"/>
-                     <activity android:name=".auth.LoginActivity"
-                         android:label="@string/title_activity_login" />
-                                  <activity android:name=".NewEntryActivity"
-                                       android:label="New Entry" />
-        <activity android:name=".auth.GoogleSignInActivity" />
-
     </application>
+
 </manifest>
